--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,13 @@ add_compile_options(-Wall -Wextra -pedantic -Wunused-variable)
 add_compile_options(-Wno-format)
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
-
-set(WIN32_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/resources.rc)
+# set(WIN32_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/resources.rc)
 
 set(SOURCE_FILES "src/main.c")
 
-add_executable(tib2farmer WIN32
+add_executable(tib2farmer
   ${SOURCE_FILES}
-  ${WIN32_RESOURCES}
+  # ${WIN32_RESOURCES}
 )
 
 target_link_libraries(tib2farmer
@@ -23,7 +22,7 @@ target_link_libraries(tib2farmer
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-  target_compile_options(tib2farmer PRIVATE -g -O0)
+  target_compile_options(tib2farmer PRIVATE -g3 -O0)
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
   target_compile_options(tib2farmer PRIVATE -O2 -march=native -s)
   target_link_options(tib2farmer PRIVATE -static-libgcc -static-libstdc++ -static)
